# joyagent-jdgenie

./: .env.example  .gitattributes  DOCKER_README.md  Deploy.md  Dockerfile  Dockerfile.python-backend  Dockerfile.python-services  Genie_start.sh  NOTICE-Third Party  README.md  README_DataAgent.md  README_EN.md  README_mrag.md  check_dep_port.sh  docker-compose-python.yml  docker-compose.yml  run-java-version.sh  run-python-version.sh  start_genie.sh
genie-backend-python/: .gitignore  CONFIGURATION_DESIGN.md  CONVERSION_README.md  JAVA_TO_PYTHON_CONVERSION_SUMMARY.md  genie_application.py  pyproject.toml  requirements.txt
genie-backend-python/scripts/: start.sh  stop.sh
genie-backend-python/src/main/python/com/jd/genie/agent/agent/: __init__.py  agent_context.py  base_agent.py  executor_agent.py  planning_agent.py  react_agent.py  react_impl_agent.py  summary_agent.py
genie-backend-python/src/main/python/com/jd/genie/agent/dto/: code_interpreter_request.py  code_interpreter_response.py  deep_search_request.py  deep_search_response.py  file.py  file_request.py  file_response.py  (+5 more)
genie-backend-python/src/main/python/com/jd/genie/config/: __init__.py  genie_config.py
genie-backend-python/src/main/python/com/jd/genie/controller/: __init__.py  genie_controller.py
genie-backend-python/src/main/python/com/jd/genie/handler/: __init__.py  agent_handler_config.py  agent_response_handler.py  base_agent_response_handler.py  plan_solve_agent_response_handler.py  react_agent_response_handler.py
genie-backend-python/src/main/python/com/jd/genie/service/: __init__.py  agent_handler_service.py  i_gpt_process_service.py  i_multi_agent_service.py
genie-backend-python/src/main/python/com/jd/genie/util/: __init__.py  chatei_utils.py  chinese_character_counter.py  sse_emitter_utf8.py  sse_util.py
genie-backend-python/src/main/resources/: application.yml
genie-tool/: .env_template  README.md  pyproject.toml  server.py
genie-tool/genie_tool/api/: __init__.py  file_manage.py  tool.py
genie-tool/genie_tool/db/: file_table_op.py
genie-tool/genie_tool/model/: protocal.py
genie-tool/genie_tool/prompt/: table_rag.yaml
genie-tool/genie_tool/tool/: deepsearch.py
genie-tool/genie_tool/tool/mrag/api/routes/: document.py
genie-tool/genie_tool/tool/mrag/document/: __init__.py  parser.py  processor.py  splitter.py
genie-tool/genie_tool/tool/mrag/embedding/: __init__.py  bm25_embedding.py  embedding.py  image_embedding.py  text_embedding.py
genie-tool/genie_tool/tool/mrag/enums/: source_type_enums.py  task_status_enums.py
genie-tool/genie_tool/tool/mrag/generation/: __init__.py  llm.py  prompt_manager.py  vlm.py
genie-tool/genie_tool/tool/mrag/init/: init_db.py
genie-tool/genie_tool/tool/mrag/query/: __init__.py  aigent.py  query_processor.py
genie-tool/genie_tool/tool/mrag/rerank/: __init__.py  text_reranker.py
genie-tool/genie_tool/tool/mrag/retrieval/: __init__.py  image_retriever.py  retriever.py  text_retriever.py
genie-tool/genie_tool/tool/mrag/storage/: __init__.py  base_vector_store.py  config_manager.py  kb_doc_store.py  kb_doc_store_sqlite_impl.py  kb_file_store.py  kb_file_store_sqlite_impl.py  kb_store.py  kb_store_sqlite_impl.py  qdrant_vector_store.py  store_factory.py  vector_store.py  vector_store_factory.py
genie-tool/genie_tool/tool/mrag/storage/models/: image_chunk_model.py  kb_doc_model.py  kb_file_model.py  kb_model.py  text_chunk_model.py
genie-tool/genie_tool/tool/mrag/utils/: __init__.py  caption_utils.py  crawl_utils.py  download_utils.py  image_utils.py  logger_utils.py  ocr_utils.py  oss_utils.py  time_utils.py
genie-tool/genie_tool/tool/search_component/: query_process.py  search_engine.py
genie-tool/genie_tool/util/: prompt_util.py
(+217 files in other folders)
