[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genie-tool"
version = "0.1.0"
description = "Genie Tools"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "greenlet>=3.2.3",
    "json-repair>=0.47.6",
    "litellm>=1.74.0.post1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pyfiglet>=1.0.3",
    "python-multipart>=0.0.20",
    "smolagents>=1.19.0",
    "sqlmodel>=0.0.24",
    "sse-starlette>=2.4.1",
    "uvicorn>=0.35.0",
]

[tool.setuptools]
# 明确指定只包含genie_tool包，排除logs和file_db_dir目录
packages = ["genie_tool"]

[tool.setuptools.package-data]
# 如果需要包含非Python文件，可以在这里指定
"genie_tool" = ["*.yaml", "*.yml", "*.json", "*.txt"]

